# private_poker

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  ADDITIONAL_FIXES_APPLIED.md  ARCHITECTURE.md  BENCHMARK_BASELINE.md  CHANGES_SUMMARY.md  CLAUDE.md  CODING_GUIDELINES.md  COMPREHENSIVE_AUDIT_REPORT.md  COMPREHENSIVE_TEST_ANALYSIS.md  COVERAGE_BASELINE.md  CRITICAL_FIXES_APPLIED.md  CURRENT_STATUS.md  DEEP_ARCHITECTURE_REVIEW.md  Dockerfile  FINAL_TEST_REPORT.md  FINAL_TEST_RESULTS.md  FIXES_APPLIED.md  FIX_COMPLETE.md  HORIZONTAL_SCALING_DESIGN.md  HTTP_WEBSOCKET_SYNC_GUIDE.md  IMPROVEMENT_PLAN.md  LEDGER_RECONCILIATION_GUIDE.md  MASTER_SUMMARY.md  MULTI_TABLE_IMPLEMENTATION_PLAN.md  Makefile  N+1_OPTIMIZATION_COMPLETE.md  PERFORMANCE_ANALYSIS.md  PRODUCTION_DEPLOYMENT_CHECKLIST.md  PRODUCTION_READY_SIGN_OFF.md  PROJECT_CLEANUP_ANALYSIS.md  PROJECT_METRICS.md  PROJECT_STATUS.md  QUICKSTART.md  README.md  REVIEW_SUMMARY.md  SESSION_10_COMPLETE.md  SESSION_11_COMPLETE.md  (+51 more)
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: ci.yml
deployment/: poker-server.service
docs/: ADMIN_GUIDE.md  API.md  DATABASE_SCHEMA.md  USER_MANUAL.md
migrations/: 001_initial_schema.sql  007_tournaments.sql  008_balance_constraints.sql  009_rate_limit_unique_constraint.sql  010_add_performance_indexes.sql  011_additional_performance_indexes.sql
pp_bots/: Cargo.toml
pp_bots/src/: app.rs  bot.rs
pp_client/: Cargo.toml
pp_client/src/: api_client.rs  app.rs  commands.rs  lib.rs  main.rs  tui_app.rs  websocket_client.rs
pp_client/tests/: client_integration.rs  multi_client_game.rs
pp_server/: Cargo.toml
pp_server/src/: config.rs  lib.rs  logging.rs  main.rs  metrics.rs
pp_server/src/api/: auth.rs  middleware.rs  mod.rs  rate_limiter.rs  request_id.rs  tables.rs  websocket.rs
pp_server/tests/: server_integration.rs  websocket_integration.rs
private_poker/: Cargo.toml
private_poker/benches/: game_benchmarks.rs
private_poker/examples/: hand_evaluation.rs
private_poker/src/: game.rs  lib.rs  net.rs
private_poker/src/auth/: errors.rs  manager.rs  mod.rs  models.rs
private_poker/src/bot/: decision.rs  manager.rs  mod.rs  models.rs
private_poker/src/db/: config.rs  mod.rs  repository.rs  timeouts.rs
private_poker/src/db/migrations/: 001_initial_schema.sql
private_poker/src/game/: entities.rs  implementation.rs  mod.rs  state_machine.rs
private_poker/src/game/states/: mod.rs
private_poker/src/net/: client.rs  errors.rs  messages.rs  protocol_version.rs  server.rs  utils.rs
private_poker/src/security/: anti_collusion.rs  errors.rs  mod.rs  rate_limiter.rs  seat_randomizer.rs
private_poker/src/table/: actor.rs  config.rs  manager.rs  messages.rs  mod.rs
private_poker/src/tournament/: manager.rs  mod.rs  models.rs
private_poker/src/wallet/: errors.rs  manager.rs  mod.rs  models.rs
private_poker/tests/: anti_collusion_integration.rs  api_integration.rs  auth_integration.rs  client_server.rs  critical_fixes_verification.rs  full_game_integration.rs  game_flow_integration.rs  hand_evaluation_proptest.rs  prize_pool_conservation.rs  security_integration.rs  side_pot_verification.rs  tournament_integration.rs  wallet_integration.rs
scripts/: README.md  backup-db.sh  backup.sh  load_test.sh  restore-db.sh
scripts/tests/: test_full_system.sh  test_game_flow.sh
web_client/: README.md  game.html  index.html  lobby.html
web_client/css/: cards.css  main.css
web_client/js/: api.js  auth.js  game.js  websocket.js
