[package]
name = "pp_bots"
version = "3.0.1"
edition = "2024"
description = "Adaptive poker bots"
repository = "https://github.com/samansohani78/private_poker"
readme = "README.md"
license = "Apache-2.0"

[dependencies]
anyhow = "1.0.100"
ctrlc = { version = "3.5.1", features = ["termination"] }
pico-args = "0.5.0"
private_poker = { version = "3.0.1", path = "../private_poker" }
rand = "0.9.2"
ratatui = "0.29.0"
