[package]
name = "pp_client"
version = "3.0.1"
edition = "2024"
description = "A poker client and TUI"
repository = "https://github.com/samansohani78/private_poker"
readme = "README.md"
license = "Apache-2.0"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
crossterm = "0.29.0"
futures-util = "0.3.31"
mio = { version = "1.1.0", features = ["net", "os-poll"] }
pico-args = "0.5.0"
private_poker = { version = "3.0.1", path = "../private_poker" }
ratatui = "0.29.0"
reqwest = { version = "0.12.24", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
tokio-tungstenite = "0.28.0"
whoami = "1.6.1"

[dev-dependencies]
rand = "0.9.2"
