[package]
name = "pp_server"
version = "3.0.1"
edition = "2024"
description = "A poker server"
repository = "https://github.com/samansohani78/private_poker"
readme = "README.md"
license = "Apache-2.0"

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.6", features = ["ws"] }
ctrlc = { version = "3.5.1", features = ["termination"] }
env_logger = "0.11.8"
futures-util = "0.3.31"
log = "0.4.28"
pico-args = "0.5.0"
private_poker = { version = "3.0.1", path = "../private_poker" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors"] }

[dev-dependencies]
http-body-util = "0.1.3"
hyper = "1.8.0"
rand = "0.9.2"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres"] }
