[package]
name = "private_poker"
version = "3.0.1"
edition = "2024"
description = "A poker library"
repository = "https://github.com/theOGognf/private_poker"
readme = "README.md"
license = "Apache-2.0"

[dependencies]
anyhow = "1.0.86"
bincode = "1.3.3"
enum_dispatch = "0.3.13"
log = "0.4.22"
mio = { version = "1.0.0", features = ["net", "os-poll"] }
rand = "0.8.5"
serde = { version = "1.0.204", features = ["derive"] }
thiserror = "1.0.63"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "chrono", "uuid"] }
tokio = { version = "1.35", features = ["full"] }

# Authentication & Security
argon2 = "0.5"
jsonwebtoken = "9.2"
totp-rs = "5.0"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
proptest = "1.4"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "game_benchmarks"
harness = false
