[package]
name = "private_poker"
version = "3.0.1"
edition = "2024"
description = "A poker library"
repository = "https://github.com/samansohani78/private_poker"
readme = "README.md"
license = "Apache-2.0"

[dependencies]
anyhow = "1.0.100"
bincode = { version = "2.0.1", features = ["std", "alloc", "serde"] }
enum_dispatch = "0.3.13"
log = "0.4.28"
mio = { version = "1.1.0", features = ["net", "os-poll"] }
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"

# Database
sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "postgres", "chrono", "uuid"] }
tokio = { version = "1.48.0", features = ["full"] }

# Authentication & Security
argon2 = "0.5.3"
jsonwebtoken = { version = "10.2", features = ["aws_lc_rs"] }
totp-rs = "5.7.0"
subtle = "2.6.1"

# Utilities
uuid = { version = "1.18.1", features = ["v4", "serde"] }
chrono = { version = "0.4.42", features = ["serde"] }
async-trait = "0.1.89"

[dev-dependencies]
proptest = "1.9.0"
criterion = { version = "0.7.0", features = ["html_reports"] }
serial_test = "3.2.0"

[[bench]]
name = "game_benchmarks"
harness = false
